# CodexBar-linux

./: CHANGELOG.md  Makefile  README.md  meson.build
.github/workflows/: ci.yml  upstream-monitor.yml
Scripts/: check-site-locales.mjs  check_upstreams.sh
Sources/CodexBar/: CursorLoginRunner.swift  InlineUsageDashboardContent.swift  MenuCardView+Costs.swift  MenuCardView.swift  PlanUtilizationHistoryChartMenuView.swift  PreferencesProviderDetailView.swift  PreferencesProvidersPane.swift  SettingsStore+Defaults.swift  SettingsStore+MenuPreferences.swift  SettingsStore.swift  StatusItemController+CostMenuCard.swift  StatusItemController+SwitcherViews.swift  UsageStore+Accessors.swift  UsageStore+PlanUtilization.swift  UsageStore+Refresh.swift  UsageStore+TokenAccounts.swift  UsageStore.swift
Sources/CodexBar/Providers/Cursor/: CursorLoginFlow.swift
Sources/CodexBar/Resources/ar.lproj/: Localizable.strings
Sources/CodexBar/Resources/ca.lproj/: Localizable.strings
Sources/CodexBar/Resources/de.lproj/: Localizable.strings
Sources/CodexBar/Resources/en.lproj/: Localizable.strings
Sources/CodexBar/Resources/es.lproj/: Localizable.strings
Sources/CodexBar/Resources/fa.lproj/: Localizable.strings
Sources/CodexBar/Resources/fr.lproj/: Localizable.strings
Sources/CodexBar/Resources/gl.lproj/: Localizable.strings
Sources/CodexBar/Resources/id.lproj/: Localizable.strings
Sources/CodexBar/Resources/it.lproj/: Localizable.strings
Sources/CodexBar/Resources/ja.lproj/: Localizable.strings
Sources/CodexBar/Resources/ko.lproj/: Localizable.strings
Sources/CodexBar/Resources/nl.lproj/: Localizable.strings
Sources/CodexBar/Resources/pl.lproj/: Localizable.strings
Sources/CodexBar/Resources/pt-BR.lproj/: Localizable.strings
Sources/CodexBar/Resources/ru.lproj/: Localizable.strings
Sources/CodexBar/Resources/sv.lproj/: Localizable.strings
Sources/CodexBar/Resources/th.lproj/: Localizable.strings
Sources/CodexBar/Resources/tr.lproj/: Localizable.strings
Sources/CodexBar/Resources/uk.lproj/: Localizable.strings
Sources/CodexBar/Resources/vi.lproj/: Localizable.strings
Sources/CodexBar/Resources/zh-Hans.lproj/: Localizable.strings
Sources/CodexBar/Resources/zh-Hant.lproj/: Localizable.strings
Sources/CodexBarCLI/: TokenAccountCLI.swift
Sources/CodexBarCore/: RemoteSessionFetcher.swift  UsageFetcher.swift
Sources/CodexBarCore/Config/: CodexBarConfig.swift  ProviderConfigEnvironment.swift
Sources/CodexBarCore/Logging/: LogCategories.swift
Sources/CodexBarCore/Providers/: ProviderFetchPlan.swift  Providers.swift
Sources/CodexBarCore/Providers/Claude/: ClaudeProviderDescriptor.swift  ClaudeStatusProbe.swift  ClaudeUsageFetcher.swift
Sources/CodexBarCore/Providers/ClinePass/: ClinePassUsageFetcher.swift
Sources/CodexBarCore/Providers/CommandCode/: CommandCodeProviderDescriptor.swift
Sources/CodexBarCore/Providers/Cursor/: CursorStatusProbe.swift
Sources/CodexBarWidget/: CodexBarWidgetViews.swift
Tests/CodexBarTests/: CLIOutputTests.swift  ClaudeBaselineCharacterizationTests.swift  ClaudeCLIScopedWeeklyUsageTests.swift  ClaudeOAuthHistoryCredentialRoutingTests.swift  ClaudeOAuthTests.swift  ClaudeUsageTests.swift  ClaudeWebFetchDeadlineTests.swift  CodexBarConfigUnknownProviderTests.swift  CodexBarWidgetProviderTests.swift  CommandCodeProviderTests.swift  CostUsageJsonlScannerTests.swift  CursorImportedSessionScanningTests.swift  CursorLoginRunnerTests.swift  FactoryStatusProbeTests.swift  LongCatProviderTests.swift  MenuCardModelTests.swift  OllamaUsageFetcherRetryMappingTests.swift  ProviderConfigEnvironmentTests.swift  ProviderDiagnosticExportTests.swift  StatusMenuCostMenuCardTests.swift  StatusMenuHostedSubmenuRefreshTests.swift  StatusMenuTests.swift  TailscaleSessionTests.swift  UsageSnapshotSwitcherWeeklyWindowTests.swift  UsageStorePathDebugTests.swift  UsageStorePlanUtilizationClaudeIdentityTests.swift  UsageStorePlanUtilizationDerivedChartTests.swift  UsageStorePlanUtilizationTests.swift
TestsLinux/: AiAndProviderLinuxTests.swift  AzureOpenAIProviderLinuxTests.swift  CLICardsClaudeSwapTests.swift  ClaudeOAuthDelegatedRefreshLinuxTests.swift  ClinePassProviderLinuxTests.swift  DeepInfraProviderLinuxTests.swift  JetBrainsParserLinuxTests.swift  NativeUsageFixtureTests.swift  NeuralWattProviderLinuxTests.swift  PlatformGatingTests.swift
docs/: TODO.md  claude.md  cli.md  configuration.md  index.html  jetbrains.md  linux-c23-migration.md  provider.md  providers.md
fixtures/native/: backend-usage.json  config-openrouter-missing.json  usage-serialization-v1.json
fixtures/native/jetbrains/: empty-quota.xml  empty-value.xml  invalid-quota.xml  invalid-refill.xml  missing-quota.xml  quota-full.xml  quota-only.xml  reversed-attributes.xml  single-quotes.xml  wrong-component.xml
linux/: README.md  meson.build
linux/data/: codexbar-status.desktop  com.steipete.codexbar.desktop
linux/src/: aiand.c  aiand.h  azure_openai.c  azure_openai.h  backend.c  backend.h  claude.c  claude.h  cli_cache.c  cli_cache.h  cli_cards.c  cli_cards.h  cli_config.c  cli_config.h  cli_cost.c  cli_cost.h  cli_diagnose.c  cli_diagnose.h  cli_serve.c  cli_serve.h  cli_sessions.c  cli_sessions.h  cli_usage.c  cli_usage.h  clinepass.c  clinepass.h  codebuff.c  codebuff.h  codex.c  codex.h  config.c  config.h  copilot.c  copilot.h  cost.c  cost.h  deepinfra.c  deepinfra.h  desktop.c  desktop.h  (+44 more)
linux/tests/: fake_backend.sh  test_aiand.c  test_azure_openai.c  test_cache_cli.sh  test_cards_cli.sh  test_claude.c  test_claude_cli.sh  test_clinepass.c  test_config_cli.sh  test_copilot.c  test_copilot_cli.sh  test_cost_cli.sh  test_deepinfra.c  test_diagnose_cli.sh  test_jetbrains.c  test_kilo.c  test_model.c  test_neuralwatt.c  test_openai_api.c  test_openai_api_cli.sh  test_opencode_go.c  test_process.c  test_serve_cli.sh  test_sessions_cli.sh  test_status_item.sh  test_tui_actions.c  test_tui_launch.sh  test_usage_cli.sh  test_usage_serialization.c  test_waybar.sh  test_wayfinder.c  test_zai.c  test_zai_cli.sh
(+6 files in other folders)
